--- a/css/about.css
+++ b/css/about.css
@@ -6,7 +6,7 @@ main section.about-me, main section.work-history, main section.education, main s
 
 /* Card Styles */
 .card {
-    background-color: #0060ff;
+    background-color: #ffffff;
     border: 1px solid #ddd;
     border-radius: 8px;
     padding: 20px;
